syntax = "proto3";

package user;

option go_package = "github.com/hydr0g3nz/ecom_back_microservice/internal/user_service/adapter/grpc/proto";

import "google/protobuf/timestamp.proto";

service UserService {
  // User management
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // Authentication
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenPairResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  TokenPairResponse token_pair = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message TokenPairResponse {
  string access_token = 1;
  string refresh_token = 2;
}
